--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-Pillow==10.1.0
-Pillow==10.1.0
-pytesseract==0.3.10
-selenium==4.15.2
-Telethon==1.32.0
-webdriver_manager==4.0.1
+Pillow
+pytesseract
+selenium
+Telethon
+webdriver_manager
